--- a/web-server/package.json
+++ b/web-server/package.json
@@ -13,6 +13,7 @@
     "express": "^4.17.1",
     "hbs": "^4.1.1",
     "install": "^0.13.0",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "request": "^2.88.2"
   }
 }
